Fixing blurry text in modal.

--- a/source/css/base/_global-classes.scss
+++ b/source/css/base/_global-classes.scss
@@ -214,6 +214,8 @@ $GLOBAL CLASSES
   padding-left: rem(20);
   padding-right: rem(20);
   @include transform(translate(-50%, -50%));
+  -webkit-backface-visibility: hidden;
+  -webkit-filter: blur(0);
 }
 
 // Borders
